Adds stub pages.

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,16 +1,47 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
+import { Icon } from 'astro-icon/components'
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(1);
+const navItemClass = "px-4 py-2 rounded-md hover:text-slate-900 hover:bg-slate-100 hover:cursor-pointer";
+const navItemClassActive = "bg-slate-100 text-slate-900";
 const { title } = Astro.props;
 ---
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>CommandBox</title>
+    <!-- <ViewTransitions /> -->
   </head>
   <body>
-    <h1>{title}</h1>
-    <slot /> <!-- your content is injected here -->
-  
+    <div class="flex h-screen">
+      <nav class="border-r h-full w-2/12 p-2 gap-1 flex flex-col text-slate-600 list-none">
+        <li class="px-4 py-2 font-medium text-lg">CommandBox</li>
+        
+        <li class={currentPath === "" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/" class="flex items-center gap-2"><Icon name="heroicons-outline:home" /> Home</a>
+        </li>    
+        <li class={currentPath === "projects" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/projects" class="flex items-center gap-2"><Icon name="heroicons-outline:folder" /> Projects</a>
+        </li>    
+        <li class={currentPath === "team" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/team" class="flex items-center gap-2"><Icon name="heroicons-outline:users" /> Team</a>
+        </li>
+        <hr class="mt-auto py-1">
+        <li class={currentPath === "settings" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/settings" class="flex items-center gap-2"><Icon name="heroicons-outline:cog-6-tooth" /> Settings</a>
+        </li>    
+        <li class={currentPath === "account" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/account" class="flex items-center gap-2"><Icon name="heroicons-outline:user-circle" /> Account</a>
+        </li>    
+      </nav>
+      <main class="p-8 w-10/12">
+        <h1 class="text-2xl">{title}</h1>
+        <slot /> <!-- your content is injected here -->    
+      </main>
+    </div>
+    
     <script>
       var o="6f2885e0",n=["Object.assign","Symbol","Symbol.for"].join("%2C"),a=window;function t(o,n){void 0===n&&(n=!1),"complete"!==document.readyState&&window.addEventListener("load",t.bind(null,o,n),{capture:!1,once:!0});var a=document.createElement("script");a.type="text/javascript",a.async=n,a.src=o,document.head.appendChild(a)}function r(){var n;if(void 0===a.CommandBar){delete a.__CommandBarBootstrap__;var r=Symbol.for("CommandBar::configuration"),e=Symbol.for("CommandBar::orgConfig"),c=Symbol.for("CommandBar::disposed"),i=Symbol.for("CommandBar::isProxy"),m=Symbol.for("CommandBar::queue"),l=Symbol.for("CommandBar::unwrap"),d=[],s=localStorage.getItem("commandbar.lc"),u=s&&s.includes("local")?"http://localhost:8000":"https://api.commandbar.com",f=Object.assign(((n={})[r]={uuid:o},n[e]={},n[c]=!1,n[i]=!0,n[m]=new Array,n[l]=function(){return f},n),a.CommandBar),p=["addCommand","boot"],y=f;Object.assign(f,{shareCallbacks:function(){return{}},shareContext:function(){return{}}}),a.CommandBar=new Proxy(f,{get:function(o,n){return n in y?f[n]:p.includes(n)?function(){var o=Array.prototype.slice.call(arguments);return new Promise((function(a,t){o.unshift(n,a,t),f[m].push(o)}))}:function(){var o=Array.prototype.slice.call(arguments);o.unshift(n),f[m].push(o)}}}),null!==s&&d.push("lc=".concat(s)),d.push("version=2"),t("".concat(u,"/latest/").concat(o,"?").concat(d.join("&")),!0)}}void 0===Object.assign||"undefined"==typeof Symbol||void 0===Symbol.for?(a.__CommandBarBootstrap__=r,t("https://polyfill.io/v3/polyfill.min.js?version=3.101.0&callback=__CommandBarBootstrap__&features="+n)):r();
       const loggedInUserId = '12345'; // example
