--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,4 +1,5 @@
 ---
+import '../css/base.css';
 import { ViewTransitions } from 'astro:transitions';
 import { Icon } from 'astro-icon/components'
 const pathname = new URL(Astro.request.url).pathname;
@@ -35,6 +36,9 @@ const { title } = Astro.props;
         <li class={currentPath === "account" ? navItemClass + " " + navItemClassActive : navItemClass}>
           <a href="/account" class="flex items-center gap-2"><Icon name="heroicons-outline:user-circle" /> Account</a>
         </li>    
+        <li class={currentPath === "themes-playground" ? navItemClass + " " + navItemClassActive : navItemClass}>
+          <a href="/themes-playground" class="flex items-center gap-2"><Icon name="heroicons-outline:cog-6-tooth" /> Themes Playground</a>
+        </li>   
       </nav>
       <main class="p-8 w-10/12">
         <h1 class="text-2xl">{title}</h1>
