--- a/src/css/theme-playground.css
+++ b/src/css/theme-playground.css
@@ -3,22 +3,25 @@ body {
 }
 
 input, button, select, textarea, input[type="checkbox"] {
-    background: red !important;
-    color: yellow !important;
-    border: 1px solid orange !important;
-    text-transform: uppercase !important;
-    padding: 17px !important;
-    border-radius: 100px !important;
-    appearance: inherit !important;
+    background: red ;
+    color: yellow ;
+    border: 4px dashed orange ;
+    text-transform: uppercase ;
+    padding: 17px ;
+    border-radius: 100px ;
+    appearance: inherit ;
+    transform: scaleX(-1);
 }
 
 a {
-    text-transform: uppercase !important;
-    color: red !important;
-    text-decoration: overline !important;
+    text-transform: uppercase ;
+    color: red ;
+    text-decoration: overline ;
+    border: 4px dashed orange ;
 }
 
 img, iframe {
-    border: 3px solid red !important;
-    border-radius: 100px !important;
+    border: 4px dashed orange ;
+    border-radius: 100px ;
+    box-shadow: rgb(255 0 0 / 35%) 0px 10px 15px 11px;
 }
